--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
 /target/
 /log/
 /.settings/
+MRSfx.iml
+.idea/.name
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/copyright/profiles_settings.xml
+.idea/libraries/Maven__com_github_virtuald_curvesapi_1_03.xml
+.idea/libraries/Maven__commons_codec_commons_codec_1_10.xml
+.idea/libraries/Maven__commons_collections_commons_collections_3_2_2.xml
+.idea/libraries/Maven__junit_junit_4_12.xml
+.idea/libraries/Maven__net_bytebuddy_byte_buddy_1_7_4.xml
+.idea/libraries/Maven__net_bytebuddy_byte_buddy_agent_1_7_4.xml
+.idea/libraries/Maven__org_apache_commons_commons_csv_1_4.xml
+.idea/libraries/Maven__org_apache_logging_log4j_log4j_api_2_9_1.xml
+.idea/libraries/Maven__org_apache_logging_log4j_log4j_core_2_9_1.xml
+.idea/libraries/Maven__org_apache_poi_poi_3_14.xml
+.idea/libraries/Maven__org_apache_poi_poi_ooxml_3_14.xml
+.idea/libraries/Maven__org_apache_poi_poi_ooxml_schemas_3_14.xml
+.idea/libraries/Maven__org_apache_xmlbeans_xmlbeans_2_6_0.xml
+.idea/libraries/Maven__org_dbunit_dbunit_2_5_4.xml
+.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3.xml
+.idea/libraries/Maven__org_hsqldb_hsqldb_2_4_0.xml
+.idea/libraries/Maven__org_mockito_mockito_core_2_10_0.xml
+.idea/libraries/Maven__org_objenesis_objenesis_2_6.xml
+.idea/libraries/Maven__org_slf4j_slf4j_api_1_7_21.xml
+.idea/libraries/Maven__stax_stax_api_1_0_1.xml
