--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,11 @@
 			<version>${dbunit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+		</dependency>
 	</dependencies>
 	<url>https://web.fhnw.ch/plattformen/swc/</url>
 </project>
