--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,19 @@
 			<version>${dbunit.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.21</version> <!-- or use LATEST -->
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>1.7.21</version> <!-- or use LATEST -->
+    </dependency>
+
+		
 	</dependencies>
 	<url>https://web.fhnw.ch/plattformen/swc/</url>
 </project>
